--- a/Notebook/path/ed-donner_llm/week5/day5_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week5/day5_ja.ipynb
@@ -513,9 +513,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LangChainではカスタムコンテキストの追加が面倒なので、素で処理する場合、以下のようになる。\n",
-    "# LangChainでretrieverにカスタム・コンテキスト（メタデータ）を追加する処理は調査したがエラーで動作せず\n",
-    "# LangChainは、動作のカスタマイズにライブラリの知識が\n",
+    "# LangChainでretrieverにカスタム・コンテキスト（メタデータ）を追加する処理は面倒なので、素で処理する場合、以下のようになる。\n",
+    "# ・LangChainでretrieverにカスタム・コンテキスト（メタデータ）を追加する処理は調査したがエラーで動作せず\n",
+    "# ・LangChainは、簡単な動作のカスタマイズにも知識が必要になり、また、バージョンアップでの破壊的変更が問題だ。\n",
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": generate_user_prompt(message)}]\n",
     "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True, seed=3, max_tokens=1000)\n",
