--- a/Notebook/path/ed-donner_llm/week6/day1_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day1_ja.ipynb
@@ -8,7 +8,7 @@
     "# 大きなプロジェクトが始まります!!\n",
     "\n",
     "## 製品プライサー\n",
-    "その説明から、何かがどれだけの費用がかかるかを推定できるモデル。\n",
+    "その説明から、どれだけの費用がかかるかを推定できるモデル。\n",
     "\n",
     "## データキュレーションパート1\n",
     "今日は、データのサブセットである「家電製品」に焦点を当てて、データセットのスクラブとキュレーションを開始します。\n",
@@ -113,7 +113,7 @@
     "\n",
     "Metaが承認しない場合は、[この Colab](https://colab.research.google.com/drive/1deJO03YZTXUwcq2vzxWbiBhrRuI29Vo8?usp=sharing#scrollTo=FqyF5jZQkIl)の最後のセルを参照してください。いずれかの問題 - 私にメッセージを送るか、私にメールしてください！  \n",
     "\n",
-    "Hugging Faceにサインインした後にこの輸入品が来る必要があることを指摘してくれた学生ジョンS.に感謝します"
+    "Hugging Faceにサインインした後にこの輸入品が来る必要があることを指摘してくれた学生 ジョン S. に感謝します"
    ]
   },
   {
@@ -123,6 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# items.pyの中で、\"meta-llama/Meta-Llama-3.1-8B\" を使っているため。\n",
     "!pip install transformers"
    ]
   },
@@ -133,7 +134,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# items.pyの中で、\"meta-llama/Meta-Llama-3.1-8B\" を使っているため。\n",
     "# items.pyの処理内容は、ファイル内にコメントを追加したので必要に応じて参照可。\n",
     "from items import Item"
    ]
@@ -170,6 +170,7 @@
    "source": [
     "# https://huggingface.co/datasets/McAuley-Lab/Amazon-Reviews-2023\n",
     "# \"raw_meta_Appliances\"は、家電機器を意味する。split=\"full\"は一式。full以外に、train/testなどを指定できる。\n",
+    "# ダウンロードは、Ubuntu の Notebook から実行している場合、Ubuntu の /home/youruser/.cache/huggingface/datasets/ に格納される。\n",
     "dataset = load_dataset(\"McAuley-Lab/Amazon-Reviews-2023\", f\"raw_meta_Appliances\", split=\"full\", trust_remote_code=True)"
    ]
   },
@@ -268,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 価格があるものについては、価格と長さを収集\n",
+    "# 価格があるものについては、価格と文字数を収集\n",
     "\n",
     "prices = []\n",
     "lengths = []\n",
@@ -329,7 +330,7 @@
     }
    ],
    "source": [
-    "# 長さの分布をプロット\n",
+    "# 文字数の分布をプロット\n",
     "\n",
     "plt.figure(figsize=(15, 6))\n",
     "plt.title(f\"Lengths: Avg {sum(lengths)/len(lengths):,.0f} and highest {max(lengths):,}\\n\")\n",
@@ -528,7 +529,7 @@
     }
    ],
    "source": [
-    "# トークンカウントの分布をプロットします\n",
+    "# トークン数の分布をプロット\n",
     "# MIN_TOKENS = 150 - MAX_TOKENS = 160 の範囲内なので\n",
     "tokens = [item.token_count for item in items]\n",
     "plt.figure(figsize=(15, 6))\n",
@@ -557,7 +558,7 @@
     }
    ],
    "source": [
-    "# 価格の分布をプロットします\n",
+    "# 価格の分布をプロット\n",
     "\n",
     "prices = [item.price for item in items]\n",
     "plt.figure(figsize=(15, 6))\n",
