--- a/Notebook/path/ed-donner_llm/week6/day2_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day2_ja.ipynb
@@ -6,27 +6,25 @@
    "metadata": {},
    "source": [
     "# 製品プライサーは継続しました\n",
+    "その説明から、どれだけの費用がかかるかを推定できるモデル。\n",
     "\n",
-    "その説明から、何かがどれだけの費用がかかるかを推定できるモデル。\n",
-    "\n",
-    "##データキュレーションパート2\n",
-    "\n",
-    "今日は、データセットをより大きなカバレッジに拡張し、トレーニング用の優れたデータセットに作成します。  \n",
-    "データキュレーションは、私たちが取り組んでいる他のことよりもエキサイティングではないように見えることがありますが、それはLLMエンジニアの責任の重要な部分であり、高品質のデータセットで独自の商用ソリューションを構築できるようにするための重要なクラフトです。\n",
+    "## データキュレーションパート2\n",
+    "今日は、データセットをより大きなカバレッジに拡張し、トレーニング用の優れたデータセットに作成します。データキュレーションは、私たちが取り組んでいる他のことよりもエキサイティングではないように見えることがありますが、それはLLMエンジニアの責任の重要な部分であり、高品質のデータセットで独自の商用ソリューションを構築できるようにするための重要なクラフトです。\n",
     "\n",
     "データセットはこちらです：  \n",
-    "https://huggingface.co/datasets/mcauley-lab/amazon-reviews-2023\n",
+    "https://huggingface.co/datasets/McAuley-Lab/Amazon-Reviews-2023\n",
     "\n",
-    "すべての製品データセットを備えたフォルダーはこちらです。  \n",
-    "https://huggingface.co/datasets/mcauley-lab/amazon-reviews-2023/tree/main/raw/meta_categories\n",
+    "すべての製品データセットを備えたフォルダーはこちらです：  \n",
+    "https://huggingface.co/datasets/McAuley-Lab/Amazon-Reviews-2023/tree/main/raw/meta_categories\n",
     "\n",
-    "##重要なメモ - 最初に私を読んでください\n",
+    "## 重要なメモ - 最初に読んでください\n",
     "\n",
-    "複数の種類の製品をカバーする400,000アイテムの大規模なデータセットを作成しようとしています。 7週目には、このデータを使用して独自のモデルをトレーニングします。これはかなり大きなデータセットであり、選択したGPUによっては、トレーニングが20時間以上かかる場合があります。本当に楽しいでしょうが、計算ユニットに数ドルかかる可能性があります。\n",
+    "複数の種類の製品をカバーする400,000アイテムの大規模なデータセットを作成しようとしています。7週目には、このデータを使用して独自のモデルをトレーニングします。これはかなり大きなデータセットであり、選択したGPUによっては、トレーニングが20時間以上かかる場合があります。本当に楽しいでしょうが、計算ユニットに数ドルかかる可能性があります。\n",
     "\n",
     "別の方法として、物事を迅速かつ低コストに保ちたい場合は、家電製品のみに焦点を当てた小さなデータセットを使用できます。同じ学習ポイントをカバーできます。結果は良好です - 完全なデータセットほど良くはありませんが、それでもかなり驚くべきことです！これをやりたい場合は、このフォルダーに「Lite.ipynb」と呼ばれる代替Jupyterノートブックを設定しました。\n",
     "\n",
-    "また、必要に応じて、最後のセルに保存するピクルスファイルをダウンロードして、このデータキュレーションをすべて実行しているのはショートカットです。ピクルスファイルは、https：//drive.google.com/drive/folders/1f_izgybvs9o0j5sb3xmtteqb3bxllzrwです"
+    "また、必要に応じて、最後のセルに保存するピクルスファイルをダウンロードして、このデータキュレーションをすべて実行しているのはショートカットです。  \n",
+    "ピクルスファイルは、https://drive.google.com/drive/folders/1f_IZGybvs9o0J5sb3xmtTEQB3BXllzrW"
    ]
   },
   {
@@ -36,17 +34,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 輸入\n",
+    "# import\n",
     "\n",
     "import os\n",
     "import random\n",
+    "import pickle\n",
+    "\n",
     "from dotenv import load_dotenv\n",
     "from huggingface_hub import login\n",
-    "from datasets import load_dataset, Dataset, DatasetDict\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import Counter, defaultdict\n",
+    "\n",
     "import numpy as np\n",
-    "import pickle"
+    "from collections import Counter, defaultdict\n",
+    "from datasets import load_dataset, Dataset, DatasetDict\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -56,11 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 環境\n",
+    "# environment\n",
     "\n",
     "load_dotenv(override=True)\n",
     "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
-    "os.environ['ANTHROPIC_API_KEY'] = os.getenv('ANTHROPIC_API_KEY', 'your-key-if-not-using-env')\n",
+    "#os.environ['ANTHROPIC_API_KEY'] = os.getenv('ANTHROPIC_API_KEY', 'your-key-if-not-using-env')\n",
     "os.environ['HF_TOKEN'] = os.getenv('HF_TOKEN', 'your-key-if-not-using-env')"
    ]
   },
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Huggingfaceにログインします\n",
+    "# Hugging Faceにログイン\n",
     "\n",
     "hf_token = os.environ['HF_TOKEN']\n",
     "login(hf_token, add_to_git_credential=True)"
@@ -84,10 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HFログイン後のより多くのインポート\n",
-    "\n",
-    "from loaders import ItemLoader\n",
-    "from items import Item"
+    "# もう1つのインポート - Itemクラスに加えItemLoader\n",
+    "# loaders.pyの処理内容は、ファイル内にコメントを追加したので必要に応じて参照可。\n",
+    "from items import Item\n",
+    "from loaders import ItemLoader"
    ]
   },
   {
@@ -97,6 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# JupiterNotebookでmatplotlibを表示できるようにする。\n",
     "%matplotlib inline"
    ]
   },
@@ -107,7 +108,7 @@
    "source": [
     "## アイテムローダーコード\n",
     "\n",
-    "Loaders.pyを見る - 私たちの生活を楽にするための便利なコードがいくつかあります"
+    "`loaders.py`を見る - 私たちの生活を楽にするための便利なコードがいくつかあります"
    ]
   },
   {
@@ -117,8 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 前回と同じデータセットにロードします\n",
-    "\n",
+    "# 前回と同じデータセットをロード\n",
     "items = ItemLoader(\"Home_and_Kitchen\").load()"
    ]
   },
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# おなじみのアイテムを探してください。\n",
+    "# アイテムを探す\n",
     "print(items[1].prompt)"
    ]
   },
@@ -140,7 +140,7 @@
    "source": [
     "## 今、スケールアップします\n",
     "\n",
-    "大規模なホーム小売店で見つけるかもしれないすべてのアイテムのすべてのデータセットを見てみましょう - 電気、電子、オフィス、関連するが、衣服 /美しさ /本ではありません。"
+    "大規模なホーム小売店で見つけるかもしれないすべてのアイテムのすべてのデータセットを見てみましょう - 電気、電子、オフィス関連で、衣服、美容、書籍ではありません。"
    ]
   },
   {
@@ -150,6 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ロードされるデータセット名（Amazon製品カテゴリ）のリストを定義\n",
     "dataset_names = [\n",
     "    \"Automotive\",\n",
     "    \"Electronics\",\n",
@@ -159,7 +160,16 @@
     "    \"Toys_and_Games\",\n",
     "    \"Appliances\",\n",
     "    \"Musical_Instruments\",\n",
-    "]"
+    "]\n",
+    "\n",
+    "\"\"\"\n",
+    "「自動車」「電化製品」\n",
+    "「オフィス用品」\n",
+    "「工具・住宅リフォーム」\n",
+    "「携帯電話・アクセサリー」\n",
+    "「玩具・ゲーム」\n",
+    "「家電」「楽器」\n",
+    "\"\"\""
    ]
   },
   {
@@ -185,6 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# すべてのデータセットからロードされたアイテムの総数を印刷\n",
     "print(f\"A grand total of {len(items):,} items\")"
    ]
   },
@@ -195,8 +206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# トークンカウントの分布を再度プロットします\n",
-    "\n",
+    "# トークン数の分布を再度プロット\n",
+    "# MIN_TOKENS = 150 - MAX_TOKENS = 160 の範囲内なので\n",
     "tokens = [item.token_count for item in items]\n",
     "plt.figure(figsize=(15, 6))\n",
     "plt.title(f\"Token counts: Avg {sum(tokens)/len(tokens):,.1f} and highest {max(tokens):,}\\n\")\n",
@@ -213,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 価格の分布をプロットします\n",
+    "# 価格の分布を再度プロット\n",
     "\n",
     "prices = [item.price for item in items]\n",
     "plt.figure(figsize=(15, 6))\n",
@@ -231,10 +242,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#「アイテムのカテゴリ毎の数」を棒グラフ（バーチャート）で可視化\n",
+    "\n",
+    "# カウント集計\n",
     "category_counts = Counter()\n",
     "for item in items:\n",
     "    category_counts[item.category]+=1\n",
     "\n",
+    "# 集計したカテゴリ名 (categories) と、その個数 (counts) のリストを作成\n",
     "categories = category_counts.keys()\n",
     "counts = [category_counts[category] for category in categories]\n",
     "\n",
@@ -272,10 +287,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 各価格のキーが1ドルから999ドルのキーを持つDICTを作成します\n",
-    "# 価値で、その価格（最も近いラウンド番号まで）のアイテムのリストを入れてください\n",
+    "# 価値でスロット分けした商品リストを作成（slots は list を返す dict）\n",
     "\n",
-    "slots = defaultdict(list)\n",
+    "slots = defaultdict(list) # キーが空の場合、空の list ([]) を自動で生成する dict\n",
     "for item in items:\n",
     "    slots[round(item.price)].append(item)"
    ]
@@ -287,20 +301,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 価格の範囲からより均等に取ろうとする「サンプル」と呼ばれるデータセットを作成する\n",
-    "# 自動車以外のカテゴリからのアイテムにより多くの重みを与えます\n",
-    "# 再現性のためにランダムシードを設定します\n",
+    "# 価格の範囲ごと（slots）にアイテムを分け、サンプル・データセット（sample）を構築する\n",
+    "# ただし、自動車カテゴリ以外のアイテムに多くの重みを与えて抽出し、価格帯毎に偏りを抑える。\n",
     "\n",
+    "# 乱数シードの固定\n",
     "np.random.seed(42)\n",
     "random.seed(42)\n",
+    "\n",
+    "# サンプルリスト生成\n",
     "sample = []\n",
-    "for i in range(1, 1000):\n",
-    "    slot = slots[i]\n",
-    "    if i>=240:\n",
+    "for i in range(1, 1000): # 価格帯ごと（1-999$）\n",
+    "    slot = slots[i] # 当該価格の商品数\n",
+    "    if i>=240:              # 240＄以上なら全件追加（数が少ないので）\n",
     "        sample.extend(slot)\n",
-    "    elif len(slot) <= 1200:\n",
+    "    elif len(slot) <= 1200: # 1200件以下なら全件追加\n",
     "        sample.extend(slot)\n",
-    "    else:\n",
+    "    else:                   # 上記以外、重みをAutomotiveは1、他は5にして1200件サンプリング\n",
     "        weights = np.array([1 if item.category=='Automotive' else 5 for item in slot])\n",
     "        weights = weights / np.sum(weights)\n",
     "        selected_indices = np.random.choice(len(slot), size=1200, replace=False, p=weights)\n",
@@ -317,8 +333,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# サンプルの価格の分布をプロットします\n",
-    "\n",
+    "# サンプルの価格の分布をプロット\n",
+    "# ・200＄位から1,200件を下回る。\n",
+    "# ・X99＄のスロットは商品数は増える。\n",
     "prices = [float(item.price) for item in sample]\n",
     "plt.figure(figsize=(15, 10))\n",
     "plt.title(f\"Avg {sum(prices)/len(prices):.2f} and highest {max(prices):,.2f}\\n\")\n",
@@ -335,32 +352,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# わかりました、私たちは平均価格を上げて、スムーズな価格の人口を持っているという点でうまくいきました\n",
-    "# カテゴリを見てみましょう\n",
+    "# 「各カテゴリにいくつのアイテムがあるか」を分かりやすいバーチャートにして、各カテゴリの上に件数も明示\n",
     "\n",
+    "# カテゴリごとの件数を数える\n",
     "category_counts = Counter()\n",
     "for item in sample:\n",
     "    category_counts[item.category]+=1\n",
     "\n",
+    "# カテゴリ名と件数のリスト作成\n",
     "categories = category_counts.keys()\n",
     "counts = [category_counts[category] for category in categories]\n",
     "\n",
-    "# バーチャートを作成します\n",
+    "# バーチャートを作成\n",
     "plt.figure(figsize=(15, 6))\n",
     "plt.bar(categories, counts, color=\"lightgreen\")\n",
     "\n",
-    "# チャートをカスタマイズします\n",
+    "# チャートをカスタマイズ\n",
     "plt.title('How many in each category')\n",
     "plt.xlabel('Categories')\n",
     "plt.ylabel('Count')\n",
     "\n",
     "plt.xticks(rotation=30, ha='right')\n",
     "\n",
-    "# 各バーの上に値ラベルを追加します\n",
+    "# 各バーの上に値ラベルを追加\n",
     "for i, v in enumerate(counts):\n",
     "    plt.text(i, v, f\"{v:,}\", ha='center', va='bottom')\n",
     "\n",
-    "# チャートを表示します\n",
+    "# チャートを表示\n",
     "plt.show()"
    ]
   },
@@ -371,19 +389,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 自動車はまだリードしていますが、やや改善されました\n",
-    "# 別の視点については、パイを見てみましょう\n",
+    "# 別の視点については「ドーナツチャート（円グラフ）を見てみましょう\n",
     "\n",
     "plt.figure(figsize=(12, 10))\n",
     "plt.pie(counts, labels=categories, autopct='%1.0f%%', startangle=90)\n",
     "\n",
-    "# 中央に円を追加してドーナツチャートを作成します（オプション）\n",
+    "# 中央に円を追加してドーナツチャートを作成（オプション）\n",
     "centre_circle = plt.Circle((0,0), 0.70, fc='white')\n",
     "fig = plt.gcf()\n",
     "fig.gca().add_artist(centre_circle)\n",
     "plt.title('Categories')\n",
     "\n",
-    "# 平等なアスペクト比は、パイが円として描かれることを保証します\n",
+    "# 平等なアスペクト比は、パイが円として描かれることを保証\n",
     "plt.axis('equal')  \n",
     "\n",
     "plt.show()"
@@ -408,21 +425,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# プロンプトの文字カウントによって価格はどのように異なりますか？\n",
+    "# プロンプト文字数と価格の関係は？\n",
     "\n",
+    "# 文字数と価格の間にうっすら相関関係を確認できる。\n",
     "sizes = [len(item.prompt) for item in sample]\n",
     "prices = [item.price for item in sample]\n",
     "\n",
-    "# 散布図を作成します\n",
+    "# 散布図を作成\n",
     "plt.figure(figsize=(15, 8))\n",
     "plt.scatter(sizes, prices, s=0.2, color=\"red\")\n",
     "\n",
-    "# ラベルとタイトルを追加します\n",
+    "# ラベルとタイトルを追加\n",
     "plt.xlabel('Size')\n",
     "plt.ylabel('Price')\n",
     "plt.title('Is there a simple correlation?')\n",
     "\n",
-    "# プロットを表示します\n",
+    "# プロットを表示\n",
     "plt.show()"
    ]
   },
@@ -433,6 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# プロンプトと、下10トークンの確認\n",
     "def report(item):\n",
     "    prompt = item.prompt\n",
     "    tokens = Item.tokenizer.encode(item.prompt)\n",
@@ -466,7 +485,7 @@
    "id": "0f03c0ee-3103-4603-af5c-b484884a3aa2",
    "metadata": {},
    "source": [
-    "＃ ついに\n",
+    "# ついに\n",
     "\n",
     "データをトレーニング、テスト、検証データセットに分割する時が来ました。\n",
     "\n",
@@ -480,6 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# データを train / test に分割\n",
     "random.seed(42)\n",
     "random.shuffle(sample)\n",
     "train = sample[:400_000]\n",
@@ -494,6 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# trainのプロンプト\n",
     "print(train[0].prompt)"
    ]
   },
@@ -504,6 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# testのプロンプト\n",
     "print(test[0].test_prompt())"
    ]
   },
@@ -532,7 +554,7 @@
    "source": [
     "# 最後に - 新しいデータセットをアップロードします\n",
     "\n",
-    "プロンプトに変換し、ハグFaceハブにアップロードします"
+    "プロンプトに変換し、Hugging Face Hubにアップロードします"
    ]
   },
   {
@@ -555,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# リストからデータセットを作成します\n",
+    "# listからdictを作成\n",
     "\n",
     "train_dataset = Dataset.from_dict({\"text\": train_prompts, \"price\": train_prices})\n",
     "test_dataset = Dataset.from_dict({\"text\": test_prompts, \"price\": test_prices})\n",
@@ -572,11 +594,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ハブにプッシュする準備ができていて、私の名前をHFユーザー名に置き換える準備ができている場合、これらの行の解除\n",
+    "# 実行前に、HFユーザー名に置き換え、Hubにプッシュする準備を完了させる。\n",
     "\n",
-    "# hf_user = \"ed-donner\"\n",
-    "# dataset_name = f \"{hf_user}/pricer-data\"\n",
-    "# dataset.push_to_hub（dataset_name、private = true）"
+    "hf_user = \"nishi74322014\"\n",
+    "DATASET_NAME = f\"{hf_user}/pricer-data\"\n",
+    "dataset.push_to_hub(DATASET_NAME, private=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e6ca743-60f0-43b0-83a0-3eeffa973ea8",
+   "metadata": {},
+   "source": [
+    "アップロードを確認：https://huggingface.co/nishi74322014/datasets"
    ]
   },
   {
@@ -586,8 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# もう一つ！\n",
-    "# 次回、このコードをすべて実行する必要がないように、トレーニングとテストデータセットを漬けてみましょう！\n",
+    "# train / test を pickle\n",
     "\n",
     "with open('train.pkl', 'wb') as file:\n",
     "    pickle.dump(train, file)\n",
@@ -601,10 +630,10 @@
    "id": "2b58dc61-747f-46f7-b9e0-c205db4f3e5e",
    "metadata": {},
    "source": [
-    "## あなたのためのトドス：\n",
+    "## あなたのための、やることリスト：\n",
     "\n",
     " - データセットをもっと調査してください！\n",
-    " - トークンザーが3桁すべての価格を1つのトークンにトークン化することを確認します"
+    " - トークナイザーが3桁すべての価格を1つのトークンにトークン化することを確認"
    ]
   }
  ],
