--- a/Notebook/path/ed-donner_llm/week6/day3.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day3.ipynb
@@ -224,7 +224,7 @@
     "\n",
     "You write a function of this form:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "def my_prediction_function(item):\n",
     "    # my code here\n",
     "    return my_estimate\n",
@@ -918,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
