--- a/Notebook/path/ed-donner_llm/week1/day1_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week1/day1_ja.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "## もしこれがもうお決まりなら！\n",
     "\n",
-    "今日の内容に既に慣れている方は、もう少し頑張ってください。最初の数回のラボはすぐに進めて構いません。数週間経つにつれて、より深く掘り下げていきます。最終的には、OpenAIに対抗できるよう、私たち自身のLLMを微調整する予定です！\n",
+    "今日の内容に既に慣れている方は、もう少し頑張ってください。最初の数回のラボはすぐに進めて構いません。数週間経つにつれて、より深く掘り下げていきます。最終的には、OpenAIに対抗できるよう、私たち自身のLLMをファインチューニングする予定です！\n",
     "\n",
     "<table style=\"margin: 0; text-align: left;\">\n",
     "    <tr>\n",
