--- a/Notebook/path/ed-donner_llm/week1/day2 EXERCISE_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week1/day2 EXERCISE_ja.ipynb
@@ -331,7 +331,7 @@
     "## また、驚くべき推論モデルDeepseekを試してみてください\n",
     "\n",
     "ここでは、1.5Bに蒸留されているDeepSeek-Reasonerのバージョンを使用します。  \n",
-    "これは実際には、deepseek R1によって生成された同期データを使用して微調整されたQwenの1.5bバリアントです。\n",
+    "これは実際には、deepseek R1によって生成された同期データを使用してファインチューニングされたQwenの1.5bバリアントです。\n",
     "\n",
     "DeepSeek の他のサイズは、[ココ](https://ollama.com/library/deepseek-r1)であり、671B パラメータのフル バージョンまで用意されていますが、これはドライブの 404GB を使用するため、ほとんどの人にとっては大きすぎます。"
    ]
