--- a/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "## ご注意ください\n",
     "\n",
-    "このラボの中央にいくつかの新しい素材を追加して、Transformerが実際に何であるかについてより多くの直感を得ました。コースの後半では、LLMSを微調整すると、これをより深く理解できます。"
+    "このラボの中央にいくつかの新しい素材を追加して、Transformerが実際に何であるかについてより多くの直感を得ました。コースの後半では、LLMをファインチューニングすると、これをより深く理解できます。"
    ]
   },
   {
@@ -780,7 +780,7 @@
     "そしてこの中に、ここにllama4のコードがあります：  \n",
     "https://github.com/huggingface/transformers/blob/main/src/transformers/models/llama4/modeling_llama4.py\n",
     "\n",
-    "明らかに、この詳細に入ることはまったく必要ではありません -  AIエンジニアの仕事は、PytorchでTransformersをコーディングするのではなく、LLMSを選択、最適化、微調整、適用することです。 OpenAI、Meta、およびその他のフロンティア・ラボは、これらのモデルの構築とトレーニングを何百万人も費やしました。しかし、あなたが興味があるなら、それは魅力的なウサギの穴です！"
+    "明らかに、この詳細に入ることはまったく必要ではありません -  AIエンジニアの仕事は、PytorchでTransformersをコーディングするのではなく、LLMを選択、最適化、ファインチューニング、適用することです。 OpenAI、Meta、およびその他のフロンティア・ラボは、これらのモデルの構築とトレーニングを何百万人も費やしました。しかし、あなたが興味があるなら、それは魅力的なウサギの穴です！"
    ]
   },
   {
