--- a/Notebook/path/ed-donner_llm/week6/day5_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day5_ja.ipynb
@@ -337,7 +337,7 @@
     "# ステップ2\n",
     "\n",
     "私は Weights＆Biase が大好きです - トレーニングを監視するための美しく無料のプラットフォームが実行されます。  \n",
-    "重みとバイアスは、微調整のためにOpenAIと統合されています。\n",
+    "重みとバイアスは、ファインチューニングのためにOpenAIと統合されています。\n",
     "\n",
     "最初に Weights＆Biase プラットフォームで\n",
     "\n",
