--- a/Notebook/path/ed-donner_llm/week7/day2_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day2_ja.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# 第7週2日\n",
     "\n",
-    "オープンソースモデルを微調整して、製品価格を予測します\n",
+    "OSSモデルをファインチューニングして、製品価格を予測します\n",
     "\n",
     "Google Colabのこのノートブックをご覧ください：\n",
     "\n",
-    "https://colab.research.google.com/drive/1t72pbzw32fq-clqep-p8yq4_qfkv4tp?usp=sharing"
+    "https://colab.research.google.com/drive/1T72pbfZw32fq-clQEp-p8YQ4_qFKv4TP?usp=sharing"
    ]
   }
  ],
