--- a/Notebook/path/ed-donner_llm/week7/day3 and 4_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day3 and 4_ja.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# 7週目3日目と4週目\n",
     "\n",
-    "オープンソースモデルを微調整して、製品価格を予測します\n",
+    "OSSモデルをファインチューニングして、製品価格を予測します\n",
     "\n",
     "Google Colabのこのノートブックをご覧ください：\n",
     "\n",
-    "https://colab.research.google.com/drive/1csedaecrtjv_1p9zmkakkjcpynltln3m？usp = sharing"
+    "https://colab.research.google.com/drive/1csEdaECRtjV_1p9zMkaKKjCpYnltlN3M?usp=sharing"
    ]
   }
  ],
