--- a/Notebook/path/ed-donner_llm/week7/day1_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day1_ja.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# 第7週1日\n",
     "\n",
-    "オープンソースモデルを微調整して、製品価格を予測します\n",
+    "オープンソースモデルをファインチューニングして、製品価格を予測します。\n",
     "\n",
     "Google Colabのこのノートブックをご覧ください：\n",
     "\n",
-    "https://colab.research.google.com/drive/15rqdmtjwk76icpbxnoqhi7ww8um-y7ni？usp = sharing"
+    "https://colab.research.google.com/drive/15rqdMTJwK76icPBxNoqhI7Ww8UM-Y7ni?usp=sharing"
    ]
   }
  ],
