--- a/Notebook/path/ed-donner_llm/week7/day5_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day5_ja.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# 週7日5\n",
     "\n",
-    "オープンソースモデルを微調整して、製品価格を予測します\n",
+    "OSSモデルをファインチューニングして、製品価格を予測します\n",
     "\n",
     "Google Colabのこのノートブックをご覧ください：\n",
     "\n",
-    "https://colab.research.google.com/drive/1iga0hf0gvqbdbd4gkck3gtudlijyn？usp = sharing"
+    "https://colab.research.google.com/drive/1igA0HF0gvQqbdBD4GkcK3GpHtuDLijYn?usp=sharing"
    ]
   }
  ],
