--- a/Notebook/path/ed-donner_llm/week2/day2_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week2/day2_ja.ipynb
@@ -335,7 +335,7 @@
    ],
    "source": [
     "# share=Trueを追加すると、公開的にアクセスできる（ngrokのトンネル技術で、fnは引き続きローカルで動く）\n",
-    "# Huggingfaceのスペースと呼ばれるプラットフォームを使用して、より永続的なホスティングを利用できます。\n",
+    "# Hugging Faceのスペースと呼ばれるプラットフォームを使用して、より永続的なホスティングを利用できます。\n",
     "# 注：一部のウイルス対策ソフトウェアと企業のファイアウォールは、share = trueを好まないかもしれません。\n",
     "#    ワークネットワークで作業している場合は、このテストをスキップすることをお勧めします。\n",
     "\n",
