--- a/Notebook/path/ed-donner_llm/week3/day1+colab_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day1+colab_ja.ipynb
@@ -84,9 +84,9 @@
     "\n",
     "講義でこれについては言及していませんでしたが、以前に行ったことがない場合は、Hugging Face Hubにログインする必要がある場合があります。\n",
     "\n",
-    "1. まだ行っていない場合は、https://huggingface.coで **free** Huggingfaceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
+    "1. まだ行っていない場合は、https://huggingface.coで **free** Hugging Faceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
     "\n",
-    "**重要** Huggingface APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
+    "**重要** Hugging Face APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
     "\n",
     "2. ここに戻って、サイドパネルの「キー」アイコンを押して「新しいシークレットを追加」します。  \n",
     "  名前フィールドに「HF_TOKEN」を入れます  \n",
