--- a/Notebook/path/ed-donner_llm/week3/day2+pipelines_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day2+pipelines_ja.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Pipelinesへようこそ！\n",
     "\n",
-    "Huggingface Transformers Libraryは、2つの異なるレベルでAPIを提供します。\n",
+    "Hugging Face Transformers Libraryは、2つの異なるレベルでAPIを提供します。\n",
     "\n",
     "典型的な推論タスクにOSSモデルを使用するための高レベルAPIは、「pipeline」と呼ばれます。非常に使いやすいです。\n",
     "\n",
@@ -55,7 +55,7 @@
     "2. 新鮮なメニューからColabをリロードし、メニュー >> すべての出力をクリア\n",
     "3. 右上のボタンを使用して新しいT4に接続\n",
     "4. 右上のメニューから「リソースを表示」を選択して、GPUがあることを確認\n",
-    "5. Colab内のセルを上下から、pipのインストールから始めて再実行\n",
+    "5. Colab内のセルを上から下へ、pipのインストールから始めて再実行\n",
     "\n",
     "そして、すべてがうまくいくはずです - そうでなければ、私に尋ねてください！"
    ]
@@ -82,7 +82,7 @@
     "\n",
     "最後の数週間のGPT、Claude、GeminiのAPIのすべての使用は、**推論**の例です。 GPTの「P」は「事前に訓練された」を表しています。つまり、6週目にデータですでに訓練されていることを意味します。\n",
     "  \n",
-    "HuggingfaceのパイプラインAPIは、**推論**  - 既にトレーニングされているモデルを実行するためのみです。 7週目には、独自のモデルをトレーニングします。また、アップコミングの講義で検討しているより高度なHuggingface APIを使用する必要があります。\n",
+    "Hugging FaceのパイプラインAPIは、**推論**  - 既にトレーニングされているモデルを実行するためのみです。 7週目には、独自のモデルをトレーニングします。また、アップコミングの講義で検討しているより高度なHugging Face APIを使用する必要があります。\n",
     "\n",
     "このプレイリストをYouTubeに録音しました。  \n",
     "https://www.youtube.com/playlist?list=plwhe-9gp9smmdl6slaovuqf2abilgbmjs\n"
@@ -191,9 +191,9 @@
     "\n",
     "講義でこれについては言及していませんでしたが、以前に行ったことがない場合は、Hugging Face Hubにログインする必要がある場合があります。\n",
     "\n",
-    "1. まだ行っていない場合は、https://huggingface.coで **free** Huggingfaceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
+    "1. まだ行っていない場合は、https://huggingface.coで **free** Hugging Faceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
     "\n",
-    "**重要** Huggingface APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
+    "**重要** Hugging Face APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
     "\n",
     "2. ここに戻って、サイドパネルの「キー」アイコンを左側に押して、新しい秘密を追加します。  \n",
     "  名前フィールドに「HF_TOKEN」を入れます  \n",
@@ -1186,7 +1186,7 @@
    ],
    "source": [
     "# 別のモデルを指定して翻訳（酷い結果になった（笑））\n",
-    "# 翻訳モデル一覧：https：//huggingface.co/models?pipeline_tag=translation&sort=trending\n",
+    "# 翻訳モデル一覧：https://huggingface.co/models?pipeline_tag=translation&sort=trending\n",
     "\n",
     "translator = pipeline(\"translation_en_to_ja\", model=\"Helsinki-NLP/opus-mt-en-jap\", device=\"cuda\")#\"translation_en_to_es\", model=\"Helsinki-NLP/opus-mt-en-es\", device=\"cuda\")\n",
     "\n",
@@ -2553,7 +2553,7 @@
     "\n",
     "https://huggingface.co/docs/diffusers/en/api/pipelines/overview\n",
     "\n",
-    "他のパイプラインのクールな例を思いついた場合は、それらを私と共有してください！ Huggingfaceがこの高度なAI機能をこのような単純なAPIで推論するために利用できるようにするのは素晴らしいことです。"
+    "他のパイプラインのクールな例を思いついた場合は、それらを私と共有してください！ Hugging Faceがこの高度なAI機能をこのような単純なAPIで推論するために利用できるようにするのは素晴らしいことです。"
    ]
   }
  ],
