--- a/Notebook/path/ed-donner_llm/week3/day2_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day2_ja.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# HuggingFace pipelines\n",
     "\n",
-    "このセッションでは、Google Colabにアクセスして、このノートブックを使用して、HuggingFaceの高レベルAPI、pipelinesを探索します。\n",
+    "このセッションでは、Google Colabにアクセスして、このノートブックを使用して、Hugging Faceの高レベルAPI、pipelinesを探索します。\n",
     "\n",
     "https://colab.research.google.com/drive/1aMaEw8A56xs0bRM4lu8z7ou18jqyybGm?usp=sharing\n",
     "\n",
     "このノートブックには、低コスト（または無料）T4 GPUランタイムを使用できます。\n",
     "\n",
-    "ノートブックには、Huggingfaceトークンを設定し、ノートブックに秘密として含めるための指示があります。"
+    "ノートブックには、Hugging Faceトークンを設定し、ノートブックに秘密として含めるための指示があります。"
    ]
   },
   {
