--- a/Notebook/path/ed-donner_llm/week3/day3+tokenizers_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day3+tokenizers_ja.ipynb
@@ -43,7 +43,7 @@
     "2. 新鮮なメニューからColabをリロードし、メニュー >> すべての出力をクリア\n",
     "3. 右上のボタンを使用して新しいT4に接続\n",
     "4. 右上のメニューから「リソースを表示」を選択して、GPUがあることを確認\n",
-    "5. Colab内のセルを上下から、pipのインストールから始めて再実行\n",
+    "5. Colab内のセルを上から下へ、pipのインストールから始めて再実行\n",
     "\n",
     "そして、すべてがうまくいくはずです - そうでなければ、私に尋ねてください！"
    ]
@@ -141,9 +141,9 @@
     "\n",
     "講義でこれについては言及していませんでしたが、以前に行ったことがない場合は、Hugging Face Hubにログインする必要がある場合があります。\n",
     "\n",
-    "1. まだ行っていない場合は、https://huggingface.coで **free** Huggingfaceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
+    "1. まだ行っていない場合は、https://huggingface.coで **free** Hugging Faceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
     "\n",
-    "**重要** Huggingface APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
+    "**重要** Hugging Face APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
     "\n",
     "2. ここに戻って、サイドパネルの「キー」アイコンを左側に押して、新しい秘密を追加します。  \n",
     "  名前フィールドに「HF_TOKEN」を入れます  \n",
@@ -194,7 +194,7 @@
     "Hugging Faceモデルの指示ページにアクセスしてください。:\n",
     "https://huggingface.co/meta-llama/Meta-Llama-3.1-8B\n",
     "\n",
-    "ページの上部には、彼らの条件に同意する方法に関する指示があります。可能であれば、Huggingfaceアカウントと同じメールを使用する必要があります。\n",
+    "ページの上部には、彼らの条件に同意する方法に関する指示があります。可能であれば、Hugging Faceアカウントと同じメールを使用する必要があります。\n",
     "\n",
     "私の経験では、承認は数分後に行われます。 3.1モデルに承認されると、3.1ファミリのモデル全体に適用されます。何らかの理由で、Metaがアクセスを承認しない場合があります。それが発生した場合は、[この](https://colab.research.google.com/drive/1deJO03YZTXUwcq2vzxWbiBhrRuI29Vo8?usp=sharing)トラブルシューティングをフォローしてください。\n",
     "\n",
@@ -203,7 +203,7 @@
     "2. 完全な読み取りおよび書き込みアクセス許可でAPIキーを設定しましたか？\n",
     "3. 上記のリンクがあるLlama3.1ページにアクセスした場合、上部近くのモデルにアクセスできることがわかりますか？\n",
     "\n",
-    "また、このトラブルシューティングコラブをセットアップして、Huggingfaceの接続性の問題を診断しようとします。  \n",
+    "また、このトラブルシューティングコラブをセットアップして、Hugging Faceの接続性の問題を診断しようとします。  \n",
     "https://colab.research.google.com/drive/1deJO03YZTXUwcq2vzxWbiBhrRuI29Vo8?usp=sharing\n"
    ]
   },
