--- a/Notebook/path/ed-donner_llm/week3/day5+mmp_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day5+mmp_ja.ipynb
@@ -11,7 +11,7 @@
     "デンバー市議会の会議議事録をいくつかダウンロードし、会議の一部を選択して、転写するようにしました。ここからダウンロードできます：  \n",
     "https://drive.google.com/file/d/1N_kpSojRR5RYzupz6nqM8hMSoEF_R7pU/view?usp=sharing\n",
     "\n",
-    "元のデータを操作したい場合は、Huggingfaceデータセットは[ココ](https://huggingface.co/datasets/huuuyeah/meetingbank)であり、オーディオは[ココ](https://huggingface.co/datasets/huuuyeah/MeetingBank_Audio/tree/main)からダウンロードできます。\n",
+    "元のデータを操作したい場合は、Hugging Faceデータセットは[ココ](https://huggingface.co/datasets/huuuyeah/meetingbank)であり、オーディオは[ココ](https://huggingface.co/datasets/huuuyeah/MeetingBank_Audio/tree/main)からダウンロードできます。\n",
     "\n",
     "この製品の目標は、オーディオを使用して、アクションを含む会議議事録を生成することです。\n",
     "\n",
@@ -48,7 +48,7 @@
     "2. 新鮮なメニューからColabをリロードし、メニュー >> すべての出力をクリア\n",
     "3. 右上のボタンを使用して新しいT4に接続\n",
     "4. 右上のメニューから「リソースを表示」を選択して、GPUがあることを確認\n",
-    "5. Colab内のセルを上下から、pipのインストールから始めて再実行\n",
+    "5. Colab内のセルを上から下へ、pipのインストールから始めて再実行\n",
     "\n",
     "そして、すべてがうまくいくはずです - そうでなければ、私に尋ねてください！"
    ]
