--- a/Notebook/path/ed-donner_llm/week6/day2+lite_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day2+lite_ja.ipynb
@@ -334,7 +334,8 @@
    "source": [
     "# プロンプト文字数と価格の関係は？\n",
     "#　liteだと明確ではないがフル（day2）だと\n",
-    "# 文字数と価格の間にうっすら相関関係を確認できる。\n",
+    "# 文字数と価格の間にうっすら相関関係を確認できる\n",
+    "# （+liteより、+google_colabの方が解り易い）\n",
     "sizes = [len(item.prompt) for item in sample]\n",
     "prices = [item.price for item in sample]\n",
     "\n",
