--- a/Notebook/path/ed-donner_llm/week7/day1_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day1_ja.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 第7週1日\n",
     "\n",
-    "オープンソースモデルをファインチューニングして、製品価格を予測します。\n",
+    "OSSモデルをファインチューニングして、製品価格を予測します。\n",
     "\n",
     "Google Colabのこのノートブックをご覧ください：\n",
     "\n",
