--- a/Notebook/path/ed-donner_llm/week7/day5+colab_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day5+colab_ja.ipynb
@@ -164,9 +164,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Huggingfaceにログインします\n",
+        "### Hugging Faceにログインします\n",
         "\n",
-        "まだHuggingfaceアカウントをお持ちでない場合は、https：//huggingface.coにアクセスしてサインアップしてトークンを作成します。\n",
+        "まだHugging Faceアカウントをお持ちでない場合は、https://huggingface.coにアクセスしてサインアップしてトークンを作成します。\n",
         "\n",
         "次に、左のキーアイコンをクリックして、このノートブックの秘密を選択し、トークンとして値を持つ「hf_token」と呼ばれる新しい秘密を追加します。\n"
       ],
@@ -177,7 +177,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Huggingfaceにログインします\n",
+        "# Hugging Faceにログインします\n",
         "\n",
         "hf_token = userdata.get('HF_TOKEN')\n",
         "login(hf_token, add_to_git_credential=True)"
