--- a/Notebook/path/ed-donner_llm/week8/day1_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week8/day1_ja.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "両方のファイルで `pricer_service.py`と` pricer_service2.py`  \n",
     "`secrets = [modal.secret.from_name（\" hf-secret \"）]]`  \n",
-    "秘密がモーダルで構成されている方法に応じて、「HF-Secret」から「Huggingface-Secret」に変更する必要がある場合があります。  \n",
+    "秘密がモーダルで構成されている方法に応じて、「HF-Secret」から「Hugging Face-Secret」に変更する必要がある場合があります。  \n",
     "確認するには、このページにアクセスして、最初の列をご覧ください。  \n",
     "https://modal.com/secrets/\n",
     "\n",
