--- a/Notebook/path/ed-donner_llm/week8/day2.0_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week8/day2.0_ja.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Huggingfaceにログインします\n",
+    "# Hugging Faceにログインします\n",
     "\n",
     "hf_token = os.environ['HF_TOKEN']\n",
     "login(hf_token, add_to_git_credential=True)"
@@ -182,7 +182,7 @@
    "source": [
     "＃sentenceTransfomerの紹介\n",
     "\n",
-    "All-Minilmは、文と段落を384次元密度のベクトル空間にマッピングするHuggingfaceの非常に便利なモデルであり、セマンティック検索などのタスクに最適です。\n",
+    "All-Minilmは、文と段落を384次元密度のベクトル空間にマッピングするHugging Faceの非常に便利なモデルであり、セマンティック検索などのタスクに最適です。\n",
     "\n",
     "https://huggingface.co/sentence-transformers/all-minilm-l6-v2\n",
     "\n",
