--- a/Notebook/path/ed-donner_llm/week8/day2.4_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week8/day2.4_ja.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Huggingfaceにログインします\n",
+    "# Hugging Faceにログインします\n",
     "\n",
     "hf_token = os.environ['HF_TOKEN']\n",
     "login(hf_token, add_to_git_credential=True)"
