--- a/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day4+models_ja.ipynb
@@ -47,7 +47,7 @@
     "2. 新鮮なメニューからColabをリロードし、メニュー >> すべての出力をクリア\n",
     "3. 右上のボタンを使用して新しいT4に接続\n",
     "4. 右上のメニューから「リソースを表示」を選択して、GPUがあることを確認\n",
-    "5. Colab内のセルを上下から、pipのインストールから始めて再実行\n",
+    "5. Colab内のセルを上から下へ、pipのインストールから始めて再実行\n",
     "\n",
     "そして、すべてがうまくいくはずです - そうでなければ、私に尋ねてください！"
    ]
@@ -148,9 +148,9 @@
     "\n",
     "講義でこれについては言及していませんでしたが、以前に行ったことがない場合は、Hugging Face Hubにログインする必要がある場合があります。\n",
     "\n",
-    "1. まだ行っていない場合は、https://huggingface.coで **free** Huggingfaceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
+    "1. まだ行っていない場合は、https://huggingface.coで **free** Hugging Faceアカウントを作成し、右上のユーザーメニューから[設定]に移動します。次に、新しいAPIトークンを作成し、書き込み許可を与えます。  \n",
     "\n",
-    "**重要** Huggingface APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
+    "**重要** Hugging Face APIキーを作成する場合、[書き込み]タブをクリックして、キーの読み取り/書き込み許可を必ず選択してください。そうしないと、後で問題が発生する可能性があります。\n",
     "\n",
     "2. ここに戻って、サイドパネルの「キー」アイコンを左側に押して、新しい秘密を追加します。  \n",
     "  名前フィールドに「HF_TOKEN」を入れます  \n",
@@ -251,7 +251,7 @@
     "Hugging Faceモデルの指示ページにアクセスしてください。:\n",
     "https://huggingface.co/meta-llama/Meta-Llama-3.1-8B\n",
     "\n",
-    "ページの上部には、彼らの条件に同意する方法に関する指示があります。可能であれば、Huggingfaceアカウントと同じメールを使用する必要があります。\n",
+    "ページの上部には、彼らの条件に同意する方法に関する指示があります。可能であれば、Hugging Faceアカウントと同じメールを使用する必要があります。\n",
     "\n",
     "私の経験では、承認は数分後に行われます。 3.1モデルに承認されると、3.1ファミリのモデル全体に適用されます。何らかの理由で、Metaがアクセスを承認しない場合があります。それが発生した場合は、[この](https://colab.research.google.com/drive/1deJO03YZTXUwcq2vzxWbiBhrRuI29Vo8?usp=sharing)トラブルシューティングをフォローしてください。\n",
     "\n",
@@ -260,7 +260,7 @@
     "2. 完全な読み取りおよび書き込みアクセス許可でAPIキーを設定しましたか？\n",
     "3. 上記のリンクがあるLlama3.1ページにアクセスした場合、上部近くのモデルにアクセスできることがわかりますか？\n",
     "\n",
-    "また、このトラブルシューティングコラブをセットアップして、Huggingfaceの接続性の問題を診断しようとします。  \n",
+    "また、このトラブルシューティングコラブをセットアップして、Hugging Faceの接続性の問題を診断しようとします。  \n",
     "https://colab.research.google.com/drive/1deJO03YZTXUwcq2vzxWbiBhrRuI29Vo8?usp=sharing\n"
    ]
   },
@@ -674,7 +674,7 @@
    "source": [
     "## Transformerモデルの内部を覗いてみる\n",
     "\n",
-    "次のセルは、LlamaのHuggingface `Model`オブジェクトを印刷します。\n",
+    "次のセルは、LlamaのHugging Face `Model`オブジェクトを印刷します。\n",
     "\n",
     "このモデルオブジェクトは、PythonフレームワークPytorchで実装されたニューラルネットワークです。\n",
     "\n",
@@ -772,9 +772,9 @@
    "source": [
     "### そして、あなたがさらに深くTransformerに行きたいなら\n",
     "\n",
-    "モデル内の各レイヤーを見ることに加えて、実際にPytorchを使用してLlamaを実装するHuggingfaceコードを見ることができます。\n",
+    "モデル内の各レイヤーを見ることに加えて、実際にPytorchを使用してLlamaを実装するHugging Faceコードを見ることができます。\n",
     "\n",
-    "これがHuggingface Transformersリポジトリです：  \n",
+    "これがHugging Face Transformersリポジトリです：  \n",
     "https://github.com/huggingface/transformers\n",
     "\n",
     "そしてこの中に、ここにllama4のコードがあります：  \n",
@@ -874,7 +874,7 @@
    "source": [
     "## コードの次のブロックに関するいくつかの簡単なメモ：\n",
     "\n",
-    "TextStreamerと呼ばれるHuggingfaceユーティリティを使用しているので、結果が戻ってきました。\n",
+    "TextStreamerと呼ばれるHugging Faceユーティリティを使用しているので、結果が戻ってきました。\n",
     "\n",
     "結果をストリーミングするには、単に置き換えます。  \n",
     "\n",
@@ -1058,7 +1058,7 @@
    "source": [
     "## GoogleからGemmaにアクセス\n",
     "\n",
-    "Googleは、Gemmaを使用する前にHuggingfaceで条件を受け入れることを求めていることも、学生（Alex K！）を教えてください（ありがとう、Alex K！）。\n",
+    "Googleは、Gemmaを使用する前にHugging Faceで条件を受け入れることを求めていることも、学生（Alex K！）を教えてください（ありがとう、Alex K！）。\n",
     "\n",
     "このリンクのモデルページにアクセスして、アクセスが許可されているように、条件で問題なくなっていることを確認してください。\n",
     "\n",
