--- a/Notebook/path/ed-donner_llm/week5/day4.0_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week5/day4.0_ja.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "embeddings = OpenAIEmbeddings()\n",
     "\n",
-    "# Huggingfaceのフリーのベクトル埋め込みを使用したい場合\n",
+    "# Hugging Faceのフリーのベクトル埋め込みを使用したい場合\n",
     "# 次と、embeddings = OpenAIEmbeddings() を交換します：\n",
     "\n",
     "# from langchain.embeddings import HuggingFaceEmbeddings\n",
